--- a/src/js/widgets/TrackerPageDebug/main.html
+++ b/src/js/widgets/TrackerPageDebug/main.html
@@ -1,2 +1,2 @@
-
+<!-- ko widget: { data: ufosTable, type: 'UfosTable' } --><!-- /ko -->
 <!-- ko widget: { data: map, type: 'GoogleMap', width: '787px', height: '640px' } --><!-- /ko -->
