--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -9,6 +9,8 @@
 			<th>Alt, m</th>
 			<th>Gspd, km/h</th>
 			<th>Vspd, m/s</th>
+			<th>Gspd with delay, km/h</th>
+			<th>Vspd with delay, m/s</th>
 		</tr>
 	</thead>
 	<tbody data-bind="foreach: ufos">
@@ -20,6 +22,8 @@
 			<td data-bind="text: alt"></td>
 			<td data-bind="text: gSpd"></td>
 			<td data-bind="text: vSpd"></td>
+			<td data-bind="text: _row.gSpd()"></td>
+			<td data-bind="text: _row.vSpd()"></td>
 		</tr>
 	</tbody>
 </table>
