added property tableData and method tableDataUpdate for async updates of table rows #2136

--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -22,8 +22,8 @@
 			<td data-bind="text: alt"></td>
 			<td data-bind="text: gSpd"></td>
 			<td data-bind="text: vSpd"></td>
-			<td data-bind="text: _row.gSpd()"></td>
-			<td data-bind="text: _row.vSpd()"></td>
+			<td data-bind="text: tableData.gSpd()"></td>
+			<td data-bind="text: tableData.vSpd()"></td>
 		</tr>
 	</tbody>
 </table>
