PlayerControl added and turned on

--- a/src/js/widgets/TrackerPageDebug/main.html
+++ b/src/js/widgets/TrackerPageDebug/main.html
@@ -1,2 +1,3 @@
+<!-- ko widget: { data: playerControl, type: 'PlayerControl' } --><!-- /ko -->
 <!-- ko widget: { data: ufosTable, type: 'UfosTable' } --><!-- /ko -->
 <!-- ko widget: { data: map, type: 'GoogleMap', width: '787px', height: '640px' } --><!-- /ko -->
