Slider widget created

--- a/src/js/widgets/PlayerControl/main.html
+++ b/src/js/widgets/PlayerControl/main.html
@@ -9,6 +9,9 @@
 <button data-bind="enable: enabled, click: speed25Click, css: { 'player-button-on': _speed() == 25, 'player-button-off': _speed() != 25 }">x25</button>
 
 <div class="player-control-slider"></div>
+
+<!-- ko widget: { data: slider, type: 'Slider' } --><!-- /ko -->
+
 <span data-bind="text: filters.formatTime(time())"></span>
 
 <hr/>
