--- a/src/js/widgets/Slider/main.html
+++ b/src/js/widgets/Slider/main.html
@@ -1,10 +1,11 @@
-
-<div>min: <span data-bind="text:min"></span></div>
-<div>max: <span data-bind="text:max"></span></div>
-<div>value: <span data-bind="text:value"></span></div>
-<div>enabled: <span data-bind="text:enabled"></span></div>
-<div>offset: <span data-bind="text:offset"></span></div>
-<div class="slider ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all">
-	<div class="ui-slider-range ui-widget-header ui-slider-range-min" data-bind="style:{width:offset()+'px'}"></div>
-	<a class="ui-slider-handle ui-state-default ui-corner-all" href="#" data-bind="event: {mouseover:hoverOn,mouseout:hoverOff,mousedown:dragStart}, style:{left:offset()+'px'}"></a>
+<div>
+	<div>min: <input data-bind="value:min"></div>
+	<div>max: <input data-bind="value:max"></div>
+	<div>val: <input data-bind="value:val"></div>
+	<div>enabled: <input type="checkbox" data-bind="checked:enabled"></div>
+	<div>offset: <span data-bind="text:offset"></span></div>
+	<div class="slider ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all">
+		<div class="ui-slider-range ui-widget-header ui-slider-range-min" data-bind="style:{width:offset()+'px'}"></div>
+		<a class="ui-slider-handle ui-state-default ui-corner-all" href="#" data-bind="event: {mouseover:hoverOn,mouseout:hoverOff,mousedown:dragStart}, style:{left:offset()+'px'}"></a>
+	</div>
 </div>
