--- a/src/js/widgets/Slider/main.html
+++ b/src/js/widgets/Slider/main.html
@@ -6,6 +6,6 @@
 	<div>offset: <span data-bind="text:offset"></span></div>
 	<div class="slider ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all">
 		<div class="ui-slider-range ui-widget-header ui-slider-range-min" data-bind="style:{width:offset()+'px'}"></div>
-		<a class="ui-slider-handle ui-state-default ui-corner-all" href="#" data-bind="event: {mouseover:hoverOn,mouseout:hoverOff,mousedown:dragStart}, style:{left:offset()+'px'}"></a>
+		<a class="ui-slider-handle ui-state-default ui-corner-all" href="#" data-bind="event: {mousedown:dragStart}, style:{left:offset()+'px'}"></a>
 	</div>
 </div>
