All DOM manipulations are now collected in domInit method, percent observable added

--- a/src/js/widgets/Slider/main.html
+++ b/src/js/widgets/Slider/main.html
@@ -2,10 +2,10 @@
 	<div>min: <input data-bind="value:min"></div>
 	<div>max: <input data-bind="value:max"></div>
 	<div>val: <input data-bind="value:val"></div>
+	<div>percent: <input data-bind="value:percent"></div>
 	<div>enabled: <input type="checkbox" data-bind="checked:enabled"></div>
-	<div>offset: <span data-bind="text:offset"></span></div>
 	<div class="slider ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all">
-		<div class="ui-slider-range ui-widget-header ui-slider-range-min" data-bind="style:{width:offset()+'px'}"></div>
-		<a class="ui-slider-handle ui-state-default ui-corner-all" href="#" data-bind="event: {mousedown:dragStart}, style:{left:offset()+'px'}"></a>
+		<div class="ui-slider-range ui-widget-header ui-slider-range-min" data-bind="style:{width:percent()+'%'}"></div>
+		<a class="ui-slider-handle ui-state-default ui-corner-all" href="#" data-bind="event: {mousedown:dragStart}, style:{left:percent()+'%'}"></a>
 	</div>
 </div>
