--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
 <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/checkbox.css">
 <link rel="stylesheet" href="css/ui-lightness/jquery-ui.css">
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
