--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -2,7 +2,7 @@
 <table>
 	<thead>
 		<tr>
-			<th><input data-bind="checked: allVisibleChecked" type="checkbox"/></th>
+			<th><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></th>
 			<th>#</th>
 			<th>Pilot name</th>
 			<th>Dist to goal, km</th>
@@ -15,7 +15,9 @@
 	</thead>
 	<tbody data-bind="foreach: ufos">
 		<tr>
-			<td data-bind="style: { backgroundColor: color }"><input data-bind="checked: visibleChecked" type="checkbox"/></td>
+			<td data-bind="style: { backgroundColor: color }">
+                <!-- ko widget: { data: visibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
+			</td>
 			<td data-bind="text: $index() + 1"></td>
 			<td data-bind="text: name"></td>
 			<td data-bind="text: statusOrDist" data-bind0="text: statusText ? statusText : leftDist() < 4294967295 ? (leftDist()/1000).toFixed(1) : '' "></td>
