window binding replaced with domNodes binding

--- a/src/js/widgets/TrackerPageDebug/main.html
+++ b/src/js/widgets/TrackerPageDebug/main.html
@@ -1,10 +1,10 @@
 
-<!-- ko widget: { data: playerControlWindow, type: 'Window', title: 'PlayerControl'} -->
+<!-- ko widget: { data: playerControlWindow, type: 'Window', title: 'PlayerControl', top: 40, left: 40} -->
 	<div>Here goes some content from TrackerPageDebug template</div>
 	<div><!-- ko widget: { data: playerControl, type: 'PlayerControl' } --><!-- /ko --></div>
 <!-- /ko -->
 
-<!-- ko widget: {data: mapWindow, type: 'Window', title: 'Google Maps Window', left: 400, width: 440} -->
+<!-- ko widget: {data: mapWindow, type: 'Window', title: 'Google Maps Window', top: 40, left: 400, width: 440} -->
 	<!-- ko widget: { data: map, type: 'GoogleMap', width: '400px', height: '300px' } --><!-- /ko -->
 <!-- /ko -->
 
