OwgMap width and height cut of, only fullscreen mode supported

--- a/src/js/widgets/OwgMap/main.html
+++ b/src/js/widgets/OwgMap/main.html
@@ -1,1 +1,1 @@
-<canvas data-bind="attr: {id: canvasId()}, style: {width: width(), height: height()}"></canvas>
+<canvas data-bind="attr: {id: canvasId()}"></canvas>
