--- a/src/js/widgets/TrackerPageDebug/main.html
+++ b/src/js/widgets/TrackerPageDebug/main.html
@@ -1,10 +1,6 @@
 
-<div style="position: absolute; top: 0; height: 300px; left: 0; right: 0;">
-<!-- ko widget: { data: map, type: 'GoogleMap', width: '100%', height: '100%' } --><!-- /ko -->
-</div>
-
-<div style="position: absolute; top: 310px; bottom: 10px; left: 0; right: 0;">
-<!-- ko widget: { data: owgMap, type: 'OwgMap', width: '100%', height: '100%' } --><!-- /ko -->
+<div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; overflow: hidden;">
+<!-- ko widget: { data: owgMap, type: 'OwgMap' } --><!-- /ko -->
 </div>
 
 
