MainMenu widget added, widgets hide/show mode added, radiogroup widget added, shortWay calculator added, cylinders, tracks, shortway modes added

--- a/src/js/widgets/PlayerControl/main.html
+++ b/src/js/widgets/PlayerControl/main.html
@@ -1,16 +1,27 @@
 <div>
-<hr/>
-
-<button data-bind="enable: enabled, click: play, css: { 'player-button-on': _state() == 'play', 'player-button-off': _state() != 'play' }">PLAY</button>
-<button data-bind="enable: enabled, click: pause, css: { 'player-button-on': _state() == 'pause', 'player-button-off': _state() != 'pause' }">PAUSE</button>
-
-<button data-bind="enable: enabled, click: changeSpeed.bind($data,1), css: { 'player-button-on': _speed() == 1, 'player-button-off': _speed() != 1 }">x1</button>
-<button data-bind="enable: enabled, click: changeSpeed.bind($data,10), css: { 'player-button-on': _speed() == 10, 'player-button-off': _speed() != 10 }">x10</button>
-<button data-bind="enable: enabled, click: changeSpeed.bind($data,25), css: { 'player-button-on': _speed() == 25, 'player-button-off': _speed() != 25 }">x25</button>
-
-<!-- ko widget: { data: slider, type: 'Slider' } --><!-- /ko -->
-
-<span data-bind="text: filters.formatTime(new Date(slider.val()))"></span>
-
-<hr/>
+	<div class="airvis-player-controls">
+		<button data-bind="enable: enabled, click: play, css: { 'player-button-on': _state() == 'play', 'player-button-off': _state() != 'play' }">PLAY</button>
+		<button data-bind="enable: enabled, click: pause, css: { 'player-button-on': _state() == 'pause', 'player-button-off': _state() != 'pause' }">PAUSE</button>
+		<button data-bind="enable: enabled, click: changeSpeed.bind($data,1), css: { 'player-button-on': _speed() == 1, 'player-button-off': _speed() != 1 }">x1</button>
+		<button data-bind="enable: enabled, click: changeSpeed.bind($data,10), css: { 'player-button-on': _speed() == 10, 'player-button-off': _speed() != 10 }">x10</button>
+		<button data-bind="enable: enabled, click: changeSpeed.bind($data,25), css: { 'player-button-on': _speed() == 25, 'player-button-off': _speed() != 25 }">x25</button>
+	</div>
+	<div class="airvis-slider-container" data-bind="widget:{data:slider,type:'Slider'}"></div>
+	<div class="airvis-current-time">Race current time: <span data-bind="text: filters.formatTime(new Date(slider.val()))"></span></div>
+	<div class="airvis-row airvis-player-controls-titles airvis-clearfix">
+		<div class="airvis-span120"><strong>Tracks</strong></div>
+		<div class="airvis-span120"><strong>Cylinders</strong></div>
+		<div class="airvis-span120"><strong>Short way</strong></div>
+	</div>
+	<div class="airvis-row airvis-clearfix">
+		<div class="airvis-span120">
+			<!-- ko widget: { data: trackVisualRadioGroup, type: "RadioGroup"} --><!-- /ko -->
+		</div>
+		<div class="airvis-span120">
+			<!-- ko widget: { data: cylindersVisualRadioGroup, type: "RadioGroup"} --><!-- /ko -->
+		</div>
+		<div class="airvis-span120">
+			<!-- ko widget: { data: shortWayVisualRadioGroup, type: "RadioGroup"} --><!-- /ko -->
+		</div>
+	</div>
 </div>
