--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,11 @@
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/global.styles.css">
+<link rel="stylesheet" href="css/airvis.css">
+<!--<link rel="stylesheet" href="css/main.css">-->
 <link rel="stylesheet" href="css/checkbox.css">
-<link rel="stylesheet" href="css/ui-lightness/jquery-ui.css">
+<!--<link rel="stylesheet" href="css/ui-lightness/jquery-ui.css">-->
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
