--- a/src/js/widgets/Slider/main.html
+++ b/src/js/widgets/Slider/main.html
@@ -1,10 +1,6 @@
 <div>
-	<div>min: <input data-bind="value:min"></div>
-	<div>max: <input data-bind="value:max"></div>
-	<div>val: <input data-bind="value:val"></div>
-	<div>enabled: <input type="checkbox" data-bind="checked:enabled"></div>
-	<div class="slider ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all">
-		<div class="ui-slider-range ui-widget-header ui-slider-range-min" data-bind="style:{width:valPercent()+'%'}"></div>
-		<a class="ui-slider-handle ui-state-default ui-corner-all" href="#" data-bind="event: {mousedown:dragStart}, style:{left:sliderPercent()+'%'}"></a>
+	<div class="slider airvis-slider" data-bind="click:clickSlider">
+		<div class="airvis-slider-range" data-bind="style:{width:valPercent()+'%'}"></div>
+		<a class="airvis-slider-handle" href="#" data-bind="event:{mousedown:dragStart},style:{left:sliderPercent()+'%'}"></a>
 	</div>
 </div>
