--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -1,40 +1,55 @@
-<form style="height: 400px; overflow: auto;">
-<table>
-	<thead>
-		<tr>
-			<th><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></th>
-			<th><!-- ko widget: { data: allTitleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></th>
-			<th><!-- ko widget: { data: allTrackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></th>
-			<th>#</th>
-			<th>Pilot name</th>
-			<th>Dist to goal, km</th>
-			<th>Alt, m</th>
-			<th>Gspd, km/h</th>
-			<th>Vspd, m/s</th>
-			<th>Gspd with delay, km/h</th>
-			<th>Vspd with delay, m/s</th>
-		</tr>
-	</thead>
-	<tbody data-bind="foreach: ufos">
-		<tr>
-			<td>
-                <!-- ko widget: { data: visibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
-			</td>
-			<td>
-                <!-- ko widget: { data: titleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
-			</td>
-			<td>
-                <!-- ko widget: { data: trackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
-			</td>
-			<td data-bind="text: $index() + 1"></td>
-			<td data-bind="text: name"></td>
-			<td data-bind="text: statusOrDist" data-bind0="text: statusText ? statusText : leftDist() < 4294967295 ? (leftDist()/1000).toFixed(1) : '' "></td>
-			<td data-bind="text: alt"></td>
-			<td data-bind="text: gSpd"></td>
-			<td data-bind="text: vSpd"></td>
-			<td data-bind="text: tableData.gSpd()"></td>
-			<td data-bind="text: tableData.vSpd()"></td>
-		</tr>
-	</tbody>
-</table>
-</form>
+<div class="airvis-table-with-fixed-header">
+	<div class="airvis-table-with-fixed-header-inner">
+		<table>
+			<thead>
+				<tr>
+					<th class="airvis-checkbox"><div><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
+					<th class="airvis-checkbox"><div><!-- ko widget: { data: allTitleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
+					<th class="airvis-checkbox"><div><!-- ko widget: { data: allTrackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
+					<th><div>#</div></th>
+					<th><div>Pilot</div></th>
+					<th><div>Dist to<br>goal, km</div></th>
+					<th><div>Alt,<br>m</div></th>
+					<th><div>Gspd,<br>km/h</div></th>
+					<th><div>Vspd,<br>m/s</div></th>
+					<th><div>Gspd with<br>delay, km/h</div></th>
+					<th><div>Vspd with<br>delay, m/s</div></th>
+				</tr>
+				<tr class="airvis-hidden-header">
+					<th class="airvis-checkbox"><div><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
+					<th class="airvis-checkbox"><div><!-- ko widget: { data: allTitleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
+					<th class="airvis-checkbox"><div><!-- ko widget: { data: allTrackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
+					<th><div>#</div></th>
+					<th><div>Pilot</div></th>
+					<th><div>Dist to<br>goal, km</div></th>
+					<th><div>Alt,<br>m</div></th>
+					<th><div>Gspd,<br>km/h</div></th>
+					<th><div>Vspd,<br>m/s</div></th>
+					<th><div>Gspd with<br>delay, km/h</div></th>
+					<th><div>Vspd with<br>delay, m/s</div></th>
+				</tr>
+			</thead>
+			<tbody data-bind="foreach: ufos">
+				<tr>
+					<td class="airvis-checkbox">
+		                <!-- ko widget: { data: visibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
+					</td>
+					<td class="airvis-checkbox">
+		                <!-- ko widget: { data: titleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
+					</td>
+					<td class="airvis-checkbox">
+		                <!-- ko widget: { data: trackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
+					</td>
+					<td data-bind="text: $index() + 1"></td>
+					<td data-bind="text: name"></td>
+					<td data-bind="text: statusOrDist" data-bind0="text: statusText ? statusText : leftDist() < 4294967295 ? (leftDist()/1000).toFixed(1) : '' "></td>
+					<td data-bind="text: alt"></td>
+					<td data-bind="text: gSpd"></td>
+					<td data-bind="text: vSpd"></td>
+					<td data-bind="text: tableData.gSpd()"></td>
+					<td data-bind="text: tableData.vSpd()"></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
