--- a/src/index.html
+++ b/src/index.html
@@ -40,15 +40,9 @@
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-  <header>
-  </header>
-  <div role="main">
-
+  <div role="main" class="airvis-container">
 <!-- ko widget: { data: page, imgRootUrl: "/img/", taskId: 1689, eventId: 1211, isOnline: false, mapWidget: "2d" } --><!-- /ko -->
-
   </div>
-  <footer>
-  </footer>
 
 
   <!-- JavaScript at the bottom for fast page loading -->
