--- a/src/js/widgets/MainMenu/main.html
+++ b/src/js/widgets/MainMenu/main.html
@@ -1,10 +1,8 @@
-<div class="airvis-main-menu">
-	<div class="airvis-logo-container airvis-clearfix">
-		<a class="airvis-logo" href="/"></a>
+<div class="airvis-title">
+	<h1 data-bind="text:titles().mainTitle"></h1>
+	<div class="airvis-clearfix">
+		<div class="airvis-title-place" data-bind="text:titles().placeTitle"></div>
+		<div class="airvis-title-date" data-bind="text:titles().dateTitle"></div>
+		<div class="airvis-title-task" data-bind="text:titles().taskTitle"></div>
 	</div>
-	<ul class="airvis-items airvis-clearfix" data-bind="foreach:items">
-		<li>
-			<a href="#" data-bind="css:{'airvis-checked':visible},click:$parent.switchVisibility,text:title"></a>
-		</li>
-	</ul>
 </div>
