10min tracks are a little bit more smooth

--- a/src/js/widgets/PlayerControl/main.html
+++ b/src/js/widgets/PlayerControl/main.html
@@ -11,7 +11,7 @@
 		<div class="airvis-player-selects">
 			<!-- ko widget: { data: cylindersVisualSelect, type: "Select"} --><!-- /ko -->
 			<!-- ko widget: { data: namesVisualSelect, type: "Select"} --><!-- /ko -->
-			<!-- ko widget: { data: trackVisualSelect, type: "Select"} --><!-- /ko -->
+			<!-- ko widget: { data: tracksVisualSelect, type: "Select"} --><!-- /ko -->
 			<!-- ko widget: { data: modelsVisualSelect, type: "Select"} --><!-- /ko -->
 		</div>
 	</div>
