Issue #3038 styled windows background

--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -1,19 +1,19 @@
 <div class="airvis-table-with-fixed-header">
 	<div class="airvis-table-with-fixed-header-inner">
-		<table>
+		<table border="0" cellpadding="0" cellspacing="0">
 			<thead>
 				<tr>
-					<th class="airvis-checkbox"><div><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
-					<th class="airvis-checkbox"><div><!-- ko widget: { data: allTitleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
-					<th class="airvis-checkbox"><div><!-- ko widget: { data: allTrackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
-					<th><div>#</div></th>
-					<th><div>Pilot</div></th>
-					<th><div>Dist to<br>goal, km</div></th>
-					<th><div>Alt,<br>m</div></th>
-					<th><div>Gspd,<br>km/h</div></th>
-					<th><div>Vspd,<br>m/s</div></th>
-					<th><div>Gspd with<br>delay, km/h</div></th>
-					<th><div>Vspd with<br>delay, m/s</div></th>
+					<th class="airvis-checkbox"><div class="th_wrap"><div><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></div></th>
+					<th class="airvis-checkbox"><div class="th_wrap"><div><!-- ko widget: { data: allTitleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></div></th>
+					<th class="airvis-checkbox"><div class="th_wrap"><div><!-- ko widget: { data: allTrackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></div></th>
+					<th><div class="th_wrap"><div>#</div></div></th>
+					<th><div class="th_wrap"><div>Pilot</div></div></th>
+					<th><div class="th_wrap"><div>Dist to<br>goal, km</div></div></th>
+					<th><div class="th_wrap"><div>Alt,<br>m</div></div></th>
+					<th><div class="th_wrap"><div>Gspd,<br>km/h</div></div></th>
+					<th><div class="th_wrap"><div>Vspd,<br>m/s</div></div></th>
+					<th><div class="th_wrap"><div>Gspd with<br>delay, km/h</div></div></th>
+					<th><div class="th_wrap"><div>Vspd with<br>delay, m/s</div></div></th>
 				</tr>
 				<tr class="airvis-hidden-header">
 					<th class="airvis-checkbox"><div><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
