--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
-<link rel="stylesheet" href="css/global.styles.css">
+<!--link rel="stylesheet" href="css/global.styles.css"-->
 <link rel="stylesheet" href="css/airvis.css">
 <!--<link rel="stylesheet" href="css/main.css">-->
 <link rel="stylesheet" href="css/checkbox.css">
