Issue #3038 styled pilots table

--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -1,3 +1,4 @@
+<div class="arvis-table-head-surrogate"></div>
 <div class="airvis-table-with-fixed-header">
 	<div class="airvis-table-with-fixed-header-inner">
 		<table border="0" cellpadding="0" cellspacing="0">
