--- a/src/js/widgets/TrackerPageDebug/main.html
+++ b/src/js/widgets/TrackerPageDebug/main.html
@@ -1,6 +1,6 @@
 
 
-<div style="position: absolute; top: 35px; bottom: 0; left: 0; right: 0; overflow: hidden;">
+<div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; overflow: hidden;">
 <!-- ko widget: { data: map, type: mapType, width: "100%", height: "100%" } --><!-- /ko -->
 </div>
 
