--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -4,51 +4,51 @@
 		<table border="0" cellpadding="0" cellspacing="0">
 			<thead>
 				<tr>
-					<th class="airvis-checkbox"><div class="th_wrap"><div><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></div></th>
-					<th class="airvis-checkbox"><div class="th_wrap"><div><!-- ko widget: { data: allTitleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></div></th>
-					<th class="airvis-checkbox"><div class="th_wrap"><div><!-- ko widget: { data: allTrackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></div></th>
-					<th><div class="th_wrap"><div>#</div></div></th>
-					<th><div class="th_wrap"><div>Pilot</div></div></th>
-					<th><div class="th_wrap"><div>Dist to<br>goal, km</div></div></th>
-					<th><div class="th_wrap"><div>Alt,<br>m</div></div></th>
-					<th><div class="th_wrap"><div>Gspd,<br>km/h</div></div></th>
-					<th><div class="th_wrap"><div>Vspd,<br>m/s</div></div></th>
-					<th><div class="th_wrap"><div>Gspd with<br>delay, km/h</div></div></th>
-					<th><div class="th_wrap"><div>Vspd with<br>delay, m/s</div></div></th>
+					<th class="first-checkbox airvis-checkbox"><div class="th_wrap"><div><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></div></th>
+					<th class="second-checkbox airvis-checkbox"><div class="th_wrap"><div><!-- ko widget: { data: allTitleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></div></th>
+					<th class="third-checkbox airvis-checkbox"><div class="th_wrap"><div><!-- ko widget: { data: allTrackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></div></th>
+					<th class="pilot-number"><div class="th_wrap"><div>#</div></div></th>
+					<th class="pilot-name"><div class="th_wrap"><div>Pilot</div></div></th>
+					<th class="dist-to-goal"><div class="th_wrap"><div>Dist to<br>goal, km</div></div></th>
+					<th class="alt"><div class="th_wrap"><div>Alt,<br>m</div></div></th>
+					<th class="gspd"><div class="th_wrap"><div>Gspd,<br>km/h</div></div></th>
+					<th class="vspd"><div class="th_wrap"><div>Vspd,<br>m/s</div></div></th>
+					<th class="gspd-with-delay"><div class="th_wrap"><div>Gspd with<br>delay, km/h</div></div></th>
+					<th class="vspd-with-delay"><div class="th_wrap"><div>Vspd with<br>delay, m/s</div></div></th>
 				</tr>
 				<tr class="airvis-hidden-header">
-					<th class="airvis-checkbox"><div><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
-					<th class="airvis-checkbox"><div><!-- ko widget: { data: allTitleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
-					<th class="airvis-checkbox"><div><!-- ko widget: { data: allTrackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
-					<th><div>#</div></th>
-					<th><div>Pilot</div></th>
-					<th><div>Dist to<br>goal, km</div></th>
-					<th><div>Alt,<br>m</div></th>
-					<th><div>Gspd,<br>km/h</div></th>
-					<th><div>Vspd,<br>m/s</div></th>
-					<th><div>Gspd with<br>delay, km/h</div></th>
-					<th><div>Vspd with<br>delay, m/s</div></th>
+					<th class="first-checkbox airvis-checkbox"><div><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
+					<th class="second-checkbox airvis-checkbox"><div><!-- ko widget: { data: allTitleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
+					<th class="third-checkbox airvis-checkbox"><div><!-- ko widget: { data: allTrackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></div></th>
+					<th class="pilot-number"><div>#</div></th>
+					<th class="pilot-name"><div>Pilot</div></th>
+					<th class="dist-to-goal"><div>Dist to<br>goal, km</div></th>
+					<th class="alt"><div>Alt,<br>m</div></th>
+					<th class="gspd"><div>Gspd,<br>km/h</div></th>
+					<th class="vspd"><div>Vspd,<br>m/s</div></th>
+					<th class="gspd-with-delay"><div>Gspd with<br>delay, km/h</div></th>
+					<th class="vspd-with-delay"><div>Vspd with<br>delay, m/s</div></th>
 				</tr>
 			</thead>
 			<tbody data-bind="foreach: ufos">
 				<tr>
-					<td class="airvis-checkbox">
+					<td class="first-checkbox airvis-checkbox">
 		                <!-- ko widget: { data: visibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
 					</td>
-					<td class="airvis-checkbox">
+					<td class="second-checkbox airvis-checkbox">
 		                <!-- ko widget: { data: titleVisibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
 					</td>
-					<td class="airvis-checkbox">
+					<td class="third-checkbox airvis-checkbox">
 		                <!-- ko widget: { data: trackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
 					</td>
-					<td data-bind="text: $index() + 1"></td>
-					<td data-bind="text: name"></td>
-					<td data-bind="text: statusOrDist" data-bind0="text: statusText ? statusText : leftDist() < 4294967295 ? (leftDist()/1000).toFixed(1) : '' "></td>
-					<td data-bind="text: alt"></td>
-					<td data-bind="text: gSpd"></td>
-					<td data-bind="text: vSpd"></td>
-					<td data-bind="text: tableData.gSpd()"></td>
-					<td data-bind="text: tableData.vSpd()"></td>
+					<td class="pilot-number" data-bind="text: $index() + 1"></td>
+					<td class="pilot-name" data-bind="text: name"></td>
+					<td class="dist-to-goal" data-bind="text: statusOrDist" data-bind0="text: statusText ? statusText : leftDist() < 4294967295 ? (leftDist()/1000).toFixed(1) : '' "></td>
+					<td class="alt" data-bind="text: alt"></td>
+					<td class="gspd" data-bind="text: gSpd"></td>
+					<td class="vspd" data-bind="text: vSpd"></td>
+					<td class="gspd-with-delay" data-bind="text: tableData.gSpd()"></td>
+					<td class="vspd-with-delay" data-bind="text: tableData.vSpd()"></td>
 				</tr>
 			</tbody>
 		</table>
