--- a/src/js/widgets/TrackerPageDebug/main.html
+++ b/src/js/widgets/TrackerPageDebug/main.html
@@ -15,5 +15,5 @@
 <!-- /ko -->
 
 <!-- ko widget: {data: ufosTableWindow, type: 'Window'} -->
-	<!-- ko widget: { data: ufosTable, type: 'UfosTable' } --><!-- /ko -->
+	<!-- ko widget: { data: ufosTable, type: 'UfosTable', modalWindow: ufosTableWindow } --><!-- /ko -->
 <!-- /ko -->
