--- a/src/js/widgets/PlayerControl/main.html
+++ b/src/js/widgets/PlayerControl/main.html
@@ -1,6 +1,7 @@
 <div>
 	<div class="airvis-clearfix">
 		<div class="airvis-player-timeWindow" data-bind="css:raceTimeCss">
+			<div class="airvis-player-time-status">Live</div>
 			<div class="airvis-player-time" data-bind="text:raceTime"></div>
 		</div>
 		<div class="airvis-player-timeText" data-bind="css:raceTimeCss,text:raceTimeText"></div>
