Issue 3038 added js libs for scrollbar

--- a/src/js/widgets/GoogleMap/main.html
+++ b/src/js/widgets/GoogleMap/main.html
@@ -1,1 +1,1 @@
-<div data-bind="style: { width: width(), height: height() }"></div>
+<div data-bind="style: { width: width(), height: height() }" class="gmap"></div>
